--- a/site/index.html
+++ b/site/index.html
@@ -174,6 +174,7 @@ layout: default
                     </div>
                 </div>
             {% endfor %}
+            <!--show information from important events-->
             <div id="events" class="carousel-item">
                 <header class="text-center">
                     <img src="assets/img/NTI-logo.png" height="218" />
@@ -191,7 +192,8 @@ layout: default
                     {% endfor %}
 
                 </div>
-            </div>
+            </div>2
+            <!--Write the headlines in the job slide-->
             <div id="dagens-yrke" class="carousel-item">
                 <header class="text-center">
                     <img style="position: absolute; left: 0px;" src="assets/img/NTI-logo.png" height="148" />
@@ -210,6 +212,7 @@ layout: default
                         <div class="row">
                             <div class="col-12">
                                 <h3 class="name pl-2">Genomsnittlig bruttolön</h3>
+                                <!--Should bring the salary from parse_salary.py-->
                                 <p id="dagens-yrke-lon" class="pl-2">
                                 </p>
                                 <p class="copyright-text pl-2">
@@ -233,7 +236,7 @@ layout: default
                         </div>
                     </div>
                 </div>
-           . </div>
+            </div>
         </div>
 
         {% if jekyll.environment == "dev" %}
@@ -248,6 +251,7 @@ layout: default
         {% endif %}
     </div>
 </div>
+<!--Gets info from the google sheet ?-->
 <script>
     function displayProfession(profession){
         {% for yrke in professions %}
@@ -277,7 +281,8 @@ layout: default
     if(todaysProfession != ""){
         displayProfession(todaysProfession);
     }
-</script>
+</script>2
+<!--Move between slides-->
 <script>
     const displayDropins = () => {
         let all = $(".drop-in").each(function() {
