Made new design for Maud.

--- a/site/index.html
+++ b/site/index.html
@@ -71,11 +71,11 @@ layout: default
             {% for member in maud_members %}
                 <div class="carousel-item">
                     <header class="text-center">
-                        <object data="assets/img/ProCivitas_logotyp.png" type="image/svg+xml" width="218" height="218">
+                        <object data="assets/img/combined-logos.png" type="image/svg+xml" width="218" height="218">
                         </object>
                     </header>
                     {% if member.DROP-IN_SLUT and member.DROP-IN_START %}
-                    <div class="drop-in procivitas name" data-dropin-end="{{ member.DROP-IN_SLUT }}" data-dropin-start="{{ member.DROP-IN_START }}">
+                    <div class="drop-in maud name" data-dropin-end="{{ member.DROP-IN_SLUT }}" data-dropin-start="{{ member.DROP-IN_START }}">
                         <h2>Tillgänglig för drop-in just nu</h2>
                     </div>
                     {% endif %}
