Fixed error in last commit.

--- a/site/index.html
+++ b/site/index.html
@@ -79,7 +79,7 @@ layout: default
                         <h2>Tillgänglig för drop-in just nu</h2>
                     </div>
                     {% endif %}
-                    <div class="name procivitas row justify-content-between">
+                    <div class="name maud row justify-content-between">
                         <div class="col-7">
                             <h2 style="padding-left: 10px;">{{ member.NAMN }}</h2>
                         </div>
@@ -113,7 +113,7 @@ layout: default
                         </div>
                         {% if member.TIPS %}
                         <div class="col-6">
-                            <h3 class="procivitas name tips">Tips</h3>
+                            <h3 class="maud name tips">Tips</h3>
                             <p class="tips-text">
                                 {{ member.TIPS }}
                             </p>
