Removed the salary dev

--- a/site/index.html
+++ b/site/index.html
@@ -211,16 +211,16 @@ layout: default
                         </p>
                     </div>
                     <div class="col-5">
-                        <div class="row">
+                      <!--  <div class="row">
                             <div class="col-12">
                                 <h3 class="name pl-2">Genomsnittlig bruttolön</h3>
-                                <!--Should bring the salary from parse_salary.py-->
+                                <!--Should bring the salary from parse_salary.py
                                 <p id="dagens-yrke-lon" class="pl-2">
                                 </p>
                                 <p class="copyright-text pl-2">
                                     Denna medellön är hämtad från www.framtid.se.
                                 </p>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="row">
                             <div class="col-12">
