Made sure location does not show up if its empty.

--- a/site/index.html
+++ b/site/index.html
@@ -54,7 +54,9 @@ layout: default
                                 <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
                                 {% endif %}
                                 <i class="fa fa-calendar-alt"></i> Arbetar: {{ member.ARBETSTIDER }}<br />
+                                {% if member.SAL %}
                                 <i class="fa fa-map-marker-alt"></i> Sal: {{ member.SAL }} <br><br><br><br><br><br />
+                                {% endif %}
                             </p>
                         </div>
                         {% if member.TIPS %}
@@ -108,7 +110,9 @@ layout: default
                                 <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
                                 {% endif %}
                                 <i class="fa fa-calendar-alt"></i> Arbetar: {{ member.ARBETSTIDER }}<br />
+                                {% if member.SAL %}
                                 <i class="fa fa-map-marker-alt"></i> Sal: {{ member.SAL }} <br><br><br><br><br><br />
+                                {% endif %}
                             </p>
                         </div>
                         {% if member.TIPS %}
@@ -162,7 +166,9 @@ layout: default
                                 <i class="fab fa-instagram"></i> Instagram: {{ member.INSTAGRAM }}<br />
                                 {% endif %}
                                 <i class="fa fa-calendar-alt"></i> Arbetar: {{ member.ARBETSTIDER }}<br />
+                                {% if member.SAL %}
                                 <i class="fa fa-map-marker-alt"></i> Sal: {{ member.SAL }} <br><br><br><br><br><br />
+                                {% endif %}
                             </p>
                         </div>
                         {% if member.TIPS %}
