Removed text SAL

--- a/site/index.html
+++ b/site/index.html
@@ -55,7 +55,7 @@ layout: default
                                 {% endif %}
                                 <i class="fa fa-calendar-alt"></i> Arbetar: {{ member.ARBETSTIDER }}<br />
                                 {% if member.SAL %}
-                                <i class="fa fa-map-marker-alt"></i> Sal: {{ member.SAL }} <br><br><br><br><br><br />
+                                <i class="fa fa-map-marker-alt"></i> {{ member.SAL }} <br><br><br><br><br><br />
                                 {% endif %}
                             </p>
                         </div>
@@ -111,7 +111,7 @@ layout: default
                                 {% endif %}
                                 <i class="fa fa-calendar-alt"></i> Arbetar: {{ member.ARBETSTIDER }}<br />
                                 {% if member.SAL %}
-                                <i class="fa fa-map-marker-alt"></i> Sal: {{ member.SAL }} <br><br><br><br><br><br />
+                                <i class="fa fa-map-marker-alt"></i> {{ member.SAL }} <br><br><br><br><br><br />
                                 {% endif %}
                             </p>
                         </div>
@@ -167,7 +167,7 @@ layout: default
                                 {% endif %}
                                 <i class="fa fa-calendar-alt"></i> Arbetar: {{ member.ARBETSTIDER }}<br />
                                 {% if member.SAL %}
-                                <i class="fa fa-map-marker-alt"></i> Sal: {{ member.SAL }} <br><br><br><br><br><br />
+                                <i class="fa fa-map-marker-alt"></i> {{ member.SAL }} <br><br><br><br><br><br />
                                 {% endif %}
                             </p>
                         </div>
