Updated to current version on pi

--- a/site/index.html
+++ b/site/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% assign eht_members = site.data.eht %}
+{% assign eht_members = site.data.stored_data %}
 
 <head>
   <meta charset="utf-8">
