Added image update functionality

--- a/site/index.html
+++ b/site/index.html
@@ -33,7 +33,7 @@ layout: default
       {% endif %}
         <div class="background-grid-layout">
           <div class="grid-item-image">
-            <img src="assets/img/Profile/{{member.FILNAMN}}.png">
+            <img src="assets/img/Profile/{{member.FILNAMN}}.jpg">
           </div>
           <div class="grid-item-information">
             <div class="info">
@@ -74,7 +74,14 @@ layout: default
       </div>
     {% endfor %}
 
-  </div>
+    <div class="item">
+      <div class="embed-wrapper">
+        <embed src="https://narvaro.ntig.net/">
+      </div>
+    </div>
+
+    </div>
+
 </div>
 
 <!-- Stops carousel from pausing on mousehover -->
