--- a/site/index.html
+++ b/site/index.html
@@ -94,6 +94,12 @@ layout: default
       for (let i = 0; i < data.length; i++) {
         for (let x = 0; x < names.length; x++) {
           if (data[i].name == names[x].innerHTML) {
+            // Hide elements if status was updated more than 24 hours ago
+            let showTimeSinceChange = moment(data[i].latest_change).isAfter(moment().subtract(24, "hours"))
+            let visibility = showTimeSinceChange ? "visible" : "hidden";
+            latestChanges[x].style.visibility = visibility;
+            status[x].style.visibility = visibility;
+
             latestChanges[x].innerHTML = 'Uppdaterad ' + moment(data[i].latest_change).fromNow();
             if (data[i].status == true) {
               status[x].innerHTML = '&bull; Tillgänglig';
