Added a missing div

--- a/site/index.html
+++ b/site/index.html
@@ -84,4 +84,6 @@ layout: default
   </div>
 
   <!-- Stops carousel from pausing on mousehover -->
-  <script src="update_status.js"></script>
+  <script src="update_status.js"></script></div>
+<!-- Stops carousel from pausing on mousehover -->
+<script src="update_status.js"></script>
