implemented te4 logo

--- a/site/index.html
+++ b/site/index.html
@@ -23,6 +23,10 @@ layout: default
   <img src="assets/img/nti-logo.svg" alt="TE4" height="150px">
   <p><b>Elev</b>hälsan</p>
 </div>
+<div class="logoright">
+  <p><b>TE4</b></p>
+  <img src="assets/img/nti-logo-reverse.svg" alt="TE4" height="150px">
+</div>
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
 
