--- a/site/index.html
+++ b/site/index.html
@@ -70,7 +70,7 @@ layout: default
               {% if member.SAL %}
               <p>
                 <img src="assets/img/location.svg">
-                Sal: {{ member.SAL}}
+                Våning: {{ member.SAL}}
               </p>
               {% endif %}
             </div>
