Changed sal to vaning

--- a/site/index.html
+++ b/site/index.html
@@ -67,10 +67,10 @@ layout: default
                 Arbetstider: {{ member.ARBETSTIDER }}
               </p>
               {% endif %}
-              {% if member.SAL %}
+              {% if member.VANING %}
               <p>
                 <img src="assets/img/location.svg">
-                Våning: {{ member.SAL}}
+                Våning: {{ member.VANING}}
               </p>
               {% endif %}
             </div>
