--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@ layout: default
 
 <div class="logo">
   <img src="assets/img/nti-logo.svg" alt="TE4" height="150px">
-  <p><b>Elev</b>hälsan</p>
+  <p><b>Elevhälsan</b></p>
 </div>
 <div class="logoright">
   <p><b>TE4</b></p>
