--- a/site/index.html
+++ b/site/index.html
@@ -42,7 +42,7 @@ layout: default
         {% endif %}
         <div class="background-grid-layout">
           <div class="grid-item-image">
-            <img src="assets/img/Profile/{{member.FILNAMN}}.jpg">
+            <img src="assets/img/Profile/{{member.FILNAMN}}">
           </div>
           <div class="grid-item-information">
             <div class="info">
